--- a/tsinghua-ds/problems/pa1-2.md
+++ b/tsinghua-ds/problems/pa1-2.md
@@ -4,7 +4,7 @@
 As shown in the following figure, If another lighthouse is in gray area, they can beacon each other.  
 ![](/tsinghua-ds/problems/img/lighthouse-0.png)  
 For example, in following figure, (B, R) is a pair of lighthouse which can beacon each other, while (B, G), (R, G) are NOT.  
-![](/tsinghua-ds/problems/img/lighthouse-1.png.png)   
+![](/tsinghua-ds/problems/img/lighthouse-1.png)   
 
 ## Input
 1st line: N   
@@ -44,7 +44,7 @@ The range of int is usually [-231, 231 - 1], it may be too small.
 ![](/tsinghua-ds/problems/img/lighthouse-0.png)  
 （图一）   
 如图一所示，每个灯塔都配有一盏探照灯，照亮其东北、西南两个对顶的直角区域。探照灯的功率之大，足以覆盖任何距离。灯塔本身是如此之小，可以假定它们不会彼此遮挡。   
-![](/tsinghua-ds/problems/img/lighthouse-1.png.png)     
+![](/tsinghua-ds/problems/img/lighthouse-1.png)     
 （图二）  
 若灯塔A、B均在对方的照亮范围内，则称它们能够照亮彼此。比如在图二的实例中，蓝、红灯塔可照亮彼此，蓝、绿灯塔则不是，红、绿灯塔也不是。  
 现在，对于任何一组给定的灯塔，请计算出其中有多少对灯塔能够照亮彼此。   
