--- a/tsinghua-ds/problems/pa1-2.md
+++ b/tsinghua-ds/problems/pa1-2.md
@@ -28,16 +28,16 @@ Output
 ```
   
 ## Restrictions
-For 90% test cases: 1 <= n <= 3 * 105  
-For 95% test cases: 1 <= n <= 106  
-For all test cases: 1 <= n <= 4 * 106  
+For 90% test cases: 1 <= n <= 3 * 10^5  
+For 95% test cases: 1 <= n <= 10^6  
+For all test cases: 1 <= n <= 4 * 10^6  
 For every lighthouses, X coordinates won't be the same , Y coordinates won't be the same.   
 1 <= x, y <= 10^8   
 Time: 2 sec  
 Memory: 256 MB   
    
 ## Hints
-The range of int is usually [-231, 231 - 1], it may be too small.  
+The range of int is usually [-2^31, 2^31 - 1], it may be too small.  
 
 ## 描述
 海上有许多灯塔，为过路船只照明。  
@@ -61,14 +61,14 @@ The range of int is usually [-231, 231 - 1], it may be too small.
 见英文题面
 
 ## 限制
-对于90%的测例：1 ≤ n ≤ 3×105  
-对于95%的测例：1 ≤ n ≤ 106   
-全部测例：1 ≤ n ≤ 4×106   
+对于90%的测例：1 ≤ n ≤ 3×10^5  
+对于95%的测例：1 ≤ n ≤ 10^6   
+全部测例：1 ≤ n ≤ 4×10^6   
 灯塔的坐标x, y是整数，且不同灯塔的x, y坐标均互异   
 1 ≤ x, y ≤ 10^8   
 时间：2 sec   
 内存：256 MB   
 
 ## 提示
-注意机器中整型变量的范围，C/C++中的int类型通常被编译成32位整数，其范围为[-231, 231 - 1]，不一定足够容纳本题的输出。  
+注意机器中整型变量的范围，C/C++中的int类型通常被编译成32位整数，其范围为[-2^31, 2^31 - 1]，不一定足够容纳本题的输出。  
    
